--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply from: rootProject.file('dependencies.gradle')
@@ -8,25 +8,15 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.waynetoo.videotv"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        ndk {
-            //设置支持的SO库架构
-            abiFilters 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-        }
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    // For Kotlin compilers:
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
-    }
     buildTypes {
         release {
             minifyEnabled false
@@ -39,10 +29,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.leanback:leanback:1.0.0'
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.google.android.exoplayer:exoplayer:2.10.4'
-    implementation project(path: ':lib_common')
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
