--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,4 +18,6 @@ dependencies {
 //    }
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+
+    implementation 'com.liulishuo.filedownloader:library:1.7.7'
 }
