--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.waynetoo.videotv"
     android:installLocation="internalOnly"
     tools:ignore="MissingLeanbackLauncher">
+    <uses-feature android:name="android.hardware.usb.host" />
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
@@ -16,9 +17,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -38,9 +40,8 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:screenOrientation="landscape"
-            android:launchMode="singleTask">
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="landscape"></activity>
         <activity
             android:name=".ui.InitActivity"
             android:banner="@drawable/app_icon_your_company"
