--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,7 +21,14 @@ dependencies {
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 
-    implementation 'com.liulishuo.filedownloader:library:1.7.7'
+//    implementation 'com.liulishuo.filedownloader:library:1.7.7'
+    // okdownload核心库
+    implementation 'com.liulishuo.okdownload:okdownload:1.0.5'
+//存储断点信息的数据库
+    implementation 'com.liulishuo.okdownload:sqlite:1.0.5'
+//提供okhttp连接，如果使用的话，需要引入okhttp网络请求库
+    implementation 'com.liulishuo.okdownload:okhttp:1.0.5'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
