--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,11 @@ android {
 
     defaultConfig {
         applicationId "com.waynetoo.videotv"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         ndk {
             //设置支持的SO库架构
             abiFilters 'armeabi-v7a' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
