--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,11 +1,17 @@
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation('com.squareup.retrofit2:retrofit:2.9.0') {
+        exclude group: 'com.squareup.okhttp3'
+    }
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    implementation('com.squareup.retrofit2:converter-gson:2.8.1') {
+        exclude group: 'com.squareup.retrofit2'
+    }
+    implementation('com.squareup.retrofit2:adapter-rxjava2:2.8.1') {
+        exclude group: 'com.squareup.retrofit2'
+    }
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
     implementation 'com.tencent.bugly:crashreport_upgrade:1.5.0'
@@ -28,7 +34,8 @@ dependencies {
     implementation 'com.liulishuo.okdownload:sqlite:1.0.5'
 //提供okhttp连接，如果使用的话，需要引入okhttp网络请求库
     implementation 'com.liulishuo.okdownload:okhttp:1.0.5'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+//    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
