--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.10.4'
     implementation project(path: ':lib_common')
+    implementation 'com.github.mjdev:libaums:0.5.5'
 }
