--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.10.4'
     implementation project(path: ':lib_common')
+
+    implementation 'com.jeremyliao:live-event-bus-x:1.7.3'
 }
