--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -49,3 +49,11 @@ dependencies {
 //    // optional - Kotlin Extensions and Coroutines support for Room
 //    implementation "androidx.room:room-ktx:$room_version"
 }
+
+def build_versions = [:]
+build_versions.min_sdk = 19
+build_versions.target_sdk = 28
+
+build_versions.version_code = 1
+build_versions.version_name = "1.0.0"
+ext.build_versions = build_versions
