--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -4,17 +4,14 @@ apply plugin: 'kotlin-android-extensions'
 apply from: rootProject.file('dependencies.gradle')
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion build_versions.target_sdk
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
+        versionCode build_versions.version_code
+        versionName build_versions.version_name
     }
 
     buildTypes {
