--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
 }
 
 def releaseTime() {
-    return new Date().format("yyMMddHHmm", TimeZone.getTimeZone("GMT+08:00"))
+    return new Date().format("MMddHHmm", TimeZone.getTimeZone("GMT+08:00"))
 }
 
 dependencies {
